# qt_mutilplayer

./: .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  config.json  resources.qrc
src/: app_config.cpp  app_config.h  clickable_slider.cpp  clickable_slider.h  main.cpp  screen_player_window.cpp  screen_player_window.h  video_player_widget.cpp  video_player_widget.h
tests/data/: test_config.json
